@@ -26,7 +26,8 @@ Changes from versions 4.1.* to version 4.2.0:
   mpfr_atanu and mpfr_atan2u.
 - New functions mpfr_cospi, mpfr_sinpi, mpfr_tanpi, mpfr_acospi, mpfr_asinpi,
   mpfr_atanpi and mpfr_atan2pi.
-- New function mpfr_log2p1, mpfr_log10p1, mpfr_exp2m1 and mpfr_compound.
+- New function mpfr_log2p1, mpfr_log10p1, mpfr_exp2m1, mpfr_exp10m1 and
+  mpfr_compound.
 - New function mpfr_fmod_ui.
 - Bug fixes.
   In particular, for the formatted output functions (mpfr_printf, etc.),
